app/resources/css/app/form.css
form {
    label {
        line-height: inherit;
        word-break: break-word;
        hyphens: auto;
    }
}

fieldset {
    margin: 0;
    padding: 0;
    border: none;
}

.form-group {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: var(--spacing-50);
}

.form-group__label {

}

.form-group__input {
    height: var(--button-height);
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: var(--spacing-100);
    padding-inline: var(--spacing-100);

    border: 1px solid var(--color-grey);
    border-radius: 9999px;
    box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);

    font-size: var(--font-size-xl);

    transition: background-color 0.3s ease-in,
        box-shadow 0.3s ease-in,
        color 0.3s ease-in,
        border-color 0.3s ease-in;

    &:disabled {
        opacity: .7;
    }
}

.form-error {
    color: var(--color-error);
}

input {
    &:focus-visible {
        outline: 2px solid var(--color-focus);
        outline-offset: 2px;
    }
}

input[type="number"] {
    text-align: right;
}

